--- a/module4 /ss7_/bai_tap/mo_rong_blog_springboot/src/main/resources/templates/blog_list.html
+++ b/module4 /ss7_/bai_tap/mo_rong_blog_springboot/src/main/resources/templates/blog_list.html
@@ -10,15 +10,14 @@
     <a th:href="@{/blog/create}"> add new blog</a>
 </p>
 <p>
-<form action="/music/search" class="d-flex">
-    <input name="nameMusic" type="search"
-           placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success" type="submit">Search</button>
+<form action="/blog" class="d-flex">
+    <input type="text" name="keyword" th:value="${keywordVar}">
+    <input value="search" type="submit">
 </form>
 </p>
 <table border="1px">
     <tr>
-        <th>ID </th>
+        <th>ID</th>
         <th>NAME BLOG</th>
         <th>CONTENT</th>
         <th>BLOGGER</th>
@@ -30,13 +29,28 @@
     <tr th:each="blog: ${blogList}">
         <td th:text="${blog.getId()}"></td>
         <td th:text="${blog.getNameBlog()}"></td>
+
         <td th:text="${blog.getContent()}"></td>
-        <td th:text="${blog.getBlogger()}"></td>
+        <td th:text="${blog.idBlogger.getNameBlogger()}"></td>
 
         <td><a th:href="@{/blog/{id}/edit(id=${blog.getId()})}">edit</a></td>
         <td><a th:href="@{/blog/{id}/delete(id=${blog.getId()})}">delete</a></td>
         <td><a th:href="@{/blog/{id}/view(id=${blog.getId()})}">view</a></td>
     </tr>
 </table>
+
+<div>
+    <a th:if="${blogList.hasPrevious()}"
+       th:href="@{/blog/(page=${blogList.number - 1}  , keyword=${keywordVar})}"> previous
+    </a>
+    <span th:text="${blogList.number + 1}"> </span>
+    /
+    <span th:text="${blogList.totalPages }"> </span>
+
+    <a th:if="${blogList.hasNext()}"
+       th:href="@{/blog/(page=${blogList.number + 1} , keyword=${keywordVar})}"> Next
+    </a>
+
+</div>
 </body>
 </html>
