--- a/module4 /ss8_validation/bai_tap/validate_music/src/main/resources/templates/view.html
+++ b/module4 /ss8_validation/bai_tap/validate_music/src/main/resources/templates/view.html
@@ -23,7 +23,7 @@
             </div>
             <div>
                 <label>KIND OF MUSIC:</label>
-                <label th:text="${music.kindOfMusic}"></label>
+                <label th:text="${music.idTypeMusic.getKindOfMusic()}"></label>
             </div>
         </div>
         <a th:href="@{/music}">
