--- a/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/home.html
+++ b/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/home.html
@@ -4,10 +4,12 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>
-        Theme du lịch BizTravel
+        Phúc Xo
 
 
     </title>
+
+
     <!-- ================= Page description ================== -->
 
     <meta name="description" content=""/>
@@ -239,8 +241,13 @@
                                 <li class="nav-item active"><a class="nav-link" href="/">Trang chủ</a></li>
 
 
-                                <li class="nav-item "><a class="nav-link" href="/gioi-thieu">Giới thiệu</a></li>
+                                <li class="nav-item "><a class="nav-link" href="http://localhost:63342/casestudy_module4_furamaresort/casestudy_module4_furamaresort.main/templates/home_furama_resort.html?_ijt=iil3acoljtivlcaop34m8cltsd">Customer</a></li>
 
+
+                                <li class="nav-item "><a class="nav-link" href="/tin-tuc">employee</a></li>
+
+
+                                <li class="nav-item "><a class="nav-link" href="/lien-he">User</a></li>
 
                                 <li class="nav-item ">
                                     <a href="/collections/all" class="nav-link">
@@ -333,10 +340,6 @@
                                 </li>
 
 
-                                <li class="nav-item "><a class="nav-link" href="/tin-tuc">Tin tức</a></li>
-
-
-                                <li class="nav-item "><a class="nav-link" href="/lien-he">Liên hệ</a></li>
 
 
                             </ul>
