--- a/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/home.html
+++ b/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/home.html
@@ -241,13 +241,15 @@
                                 <li class="nav-item active"><a class="nav-link" href="/">Trang chủ</a></li>
 
 
-                                <li class="nav-item "><a class="nav-link" href="http://localhost:63342/casestudy_module4_furamaresort/casestudy_module4_furamaresort.main/templates/home_furama_resort.html?_ijt=iil3acoljtivlcaop34m8cltsd">Customer</a></li>
+                                <li class="nav-item "><a class="nav-link" href="#">Employee</a></li>
 
 
-                                <li class="nav-item "><a class="nav-link" href="/tin-tuc">employee</a></li>
+                                <li class="nav-item "><a class="nav-link" href="/tin-tuc">Customer</a></li>
 
 
-                                <li class="nav-item "><a class="nav-link" href="/lien-he">User</a></li>
+                                <li class="nav-item "><a class="nav-link" th:href="@{/resort/facility}">facility</a></li>
+
+                                <li class="nav-item "><a class="nav-link" href="/lien-he">Contract</a></li>
 
                                 <li class="nav-item ">
                                     <a href="/collections/all" class="nav-link">
