--- a/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/home.html
+++ b/module4 /casestudy_module4/casestudy_module4_furamaresort/src/main/resources/templates/home.html
@@ -171,49 +171,7 @@
 <body>
 <!-- Main content -->
 <header class="header">
-    <div class="topbar">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
-                    <ul class="list-inline">
-                        <li class="hidden-sm hidden-xs">
-                            <span>Chào mừng bạn đến với cửa hàng trực tuyến của chúng tôi !</span>
-                        </li>
-                        <li>
-                            <a href="/cart">
-                                <i class="fa fa-shopping-cart"></i> Giỏ hàng (<span class="cartCount count_item_pr"
-                                                                                    id="cart-total"></span>)
-                            </a>
-                        </li>
 
-                        <li>
-                            <a href="/account/login" class="login_btn">Đăng nhập</a>
-                        </li>
-                        <li>
-                            <a href="/account/register" class="register_btn">Đăng ký</a>
-                        </li>
-
-                    </ul>
-                </div>
-                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                    <div class="search f-right">
-                        <div class="header_search search_form">
-                            <form class="input-group search-bar search_form" action="/search" method="get"
-                                  role="search">
-                                <input type="search" name="query" value="" placeholder="Tìm kiếm ... "
-                                       class="input-group-field st-default-search-input search-text" autocomplete="off">
-                                <span class="input-group-btn">
-			<button class="btn icon-fallback-text">
-				<i class="fa fa-search"></i>
-			</button>
-		</span>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <div class="header_bar">
         <div class="container">
@@ -238,7 +196,7 @@
                             <ul id="nav" class="nav f-right">
 
 
-                                <li class="nav-item active"><a class="nav-link" href="/">Trang chủ</a></li>
+                                <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
 
 
                                 <li class="nav-item "><a class="nav-link" href="#">Employee</a></li>
@@ -247,13 +205,14 @@
                                 <li class="nav-item "><a class="nav-link" href="/tin-tuc">Customer</a></li>
 
 
-                                <li class="nav-item "><a class="nav-link" th:href="@{/resort/facility}">facility</a></li>
+                                <li class="nav-item "><a class="nav-link" th:href="@{/resort/facility}">facility</a>
+                                </li>
 
                                 <li class="nav-item "><a class="nav-link" href="/lien-he">Contract</a></li>
 
                                 <li class="nav-item ">
                                     <a href="/collections/all" class="nav-link">
-                                        <span>Sản phẩm</span>
+                                        <span>Product</span>
                                         <i class="fa fa-angle-down" data-toggle="dropdown"></i>
                                     </a>
                                     <ul class="dropdown-menu">
@@ -306,42 +265,9 @@
 
                                         </li>
 
-                                        <li class="dropdown-submenu nav-item-lv2">
-                                            <a class="nav-link" href="/khach-san">
-                                                <span>Khách sạn</span>
-
-                                            </a>
-
-                                        </li>
-
-                                        <li class="dropdown-submenu nav-item-lv2">
-                                            <a class="nav-link" href="/frontpage">
-                                                <span>Tour giá rẻ</span>
-
-                                            </a>
-
-                                        </li>
-
-                                        <li class="dropdown-submenu nav-item-lv2">
-                                            <a class="nav-link" href="/san-pham-noi-bat">
-                                                <span>Tour nối bật</span>
-
-                                            </a>
-
-                                        </li>
-
-                                        <li class="dropdown-submenu nav-item-lv2">
-                                            <a class="nav-link" href="/san-pham-khuyen-mai">
-                                                <span>Tour khuyến mãi</span>
-
-                                            </a>
-
-                                        </li>
 
                                     </ul>
                                 </li>
-
-
 
 
                             </ul>
